--- a/lecture-notes.cls
+++ b/lecture-notes.cls
@@ -4,7 +4,7 @@
 %%
 %% The original source files were:
 %%
-%% classes.dtx  (with options: `lecture-notes,common')
+%% classes.dtx  (with options: `lecture-notes,long-common,common')
 %% Copyright (C) 2011 by Clemens Koppensteiner
 %% -------------------------------------------
 %% 
