--- a/long-notes.cls
+++ b/long-notes.cls
@@ -1,10 +1,10 @@
 %%
-%% This is file `paper-notes.cls',
+%% This is file `long-notes.cls',
 %% generated with the docstrip utility.
 %%
 %% The original source files were:
 %%
-%% classes.dtx  (with options: `paper-notes,common,short-common')
+%% classes.dtx  (with options: `long-notes,common,long-common')
 %% Copyright (C) 2011 by Clemens Koppensteiner
 %% -------------------------------------------
 %% 
@@ -19,11 +19,11 @@
 %% and version 1.3 or later is part of all distributions of LaTeX
 %% version 2005/12/01 or later.
 \NeedsTeXFormat{LaTeX2e}[1999/12/01]
-\ProvidesClass{paper-notes}
+\ProvidesClass{long-notes}
    [2011/07/22 v0.2
-     A class for notes on articles
+      A class for longer notes
    ]
-\LoadClassWithOptions{scrartcl}
+\LoadClassWithOptions{scrbook}
 \RequirePackage{xstring}
 \RequirePackage{iftex}
 \newif\ifkindledxlandscape
@@ -67,6 +67,8 @@
     footinclude=false,
     headinclude=false,
     pagesize,
+    twoside,
+    open=right,
 }
 \recalctypearea
 \ifkindledxlandscape
@@ -142,33 +144,49 @@
 \else
     \colorlet{sectioningcolor}{cyan!15!blue}
 \fi
-\KOMAoptions{numbers=enddot}
-
 \ifbw
-    \setkomafont{title}{\normalfont\normalcolor\sffamily\scshape\LARGE\color{sectioningcolor}}
+    \setkomafont{chapter}{\normalfont\normalcolor\sffamily\scshape\huge\color{sectioningcolor}}
     \setkomafont{section}{\normalfont\normalcolor\sffamily\scshape\Large\color{sectioningcolor}}
     \setkomafont{subsection}{\normalfont\normalcolor\sffamily\scshape\large\color{sectioningcolor}}
-    \setkomafont{sectionentry}{\normalfont\normalcolor\sffamily\scshape}
-    \setkomafont{subsubsection}{\normalfont\normalcolor\sffamily\scshape\color{sectioningcolor}}
 \else
-    \setkomafont{title}{\normalfont\normalcolor\scshape\LARGE\color{sectioningcolor}}
-    \setkomafont{section}{\normalfont\normalcolor\scshape\large\color{sectioningcolor}\centering}
-    \setkomafont{subsection}{\normalfont\normalcolor\scshape\color{sectioningcolor}}
-    \setkomafont{sectionentry}{\normalfont\normalcolor\scshape}
-    \setkomafont{subsubsection}{\normalfont\normalcolor\color{sectioningcolor}}
+    \setkomafont{chapter}{\normalfont\normalcolor\sffamily\huge\color{sectioningcolor}}
+    \setkomafont{section}{\normalfont\normalcolor\sffamily\Large\color{sectioningcolor}}
+    \setkomafont{subsection}{\normalfont\normalcolor\sffamily\large\color{sectioningcolor}}
 \fi
 \setkomafont{paragraph}{\normalfont\normalcolor\sffamily\bfseries}
 \setkomafont{subparagraph}{\normalfont\normalcolor\sffamily\itshape}
 \pagestyle{scrheadings}
-\AtBeginDocument{
-    \clearscrheadfoot
-    \let\@@title\@title
-    \ihead{\normalfont\scshape\color{gray}\@@title}
-    \chead{}
-    \ohead{\pagemark}
-    \cfoot[\pagemark]{}
-    \setheadsepline{0.5pt}
+
+\ifkindledx
+    \AtBeginDocument{%
+        \cfoot{}%
+        \chead{\normalfont\scshape\headmark}%
+        \ohead{\normalfont\pagemark}%
+        \renewcommand*\partpagestyle{empty}%
+        \renewcommand*\chapterpagestyle{empty}%
+        \renewcommand*\indexpagestyle{empty}%
+    }
+\else
+    \AtBeginDocument{%
+        \lehead{\normalfont\scshape\headmark}%
+        \setheadsepline{0.4pt}[\color{black!30}]%
+    }
+    \appto\backmatter{%
+\rohead{\normalfont\scshape\headmark}%
+    }
+\fi
+\RequirePackage{makeidx}
+\RequirePackage{index}
+\makeindex
+\appto\theindex{%
+\markboth{\indexname}{\indexname}%
+\addcontentsline{toc}{chapter}{\indexname}%
 }
+
+\RequirePackage[noprefix,refpage,intoc]{nomencl}
+\renewcommand\nomname{List of Notation}
+\renewcommand{\pagedeclaration}[1]{\hfill #1}
+\makenomenclature
 \RequirePackage{tikz}
 \usetikzlibrary{
     positioning,
@@ -217,7 +235,7 @@
 \RequirePackage[colorlinks=false,unicode=true]{hyperref}
 \theoremstyle{plain}
 \ifnumbertheorems
-\newtheorem{Thm}{Theorem}
+\newtheorem{Thm}{Theorem}[chapter]
 \else
     \newtheorem*{Thm}{Theorem}
 \fi
@@ -275,68 +293,82 @@
 \fi
 \let\@version\@empty%
 \newcommand{\version}[1]{\gdef\@version{#1}}%
-\let\ck@paperref\@empty
-\def\paperref#1{%
-    \def\ck@paperref{#1}%
-    \title{Notes on: \citeauthor{#1} --- \citetitle{#1}}%
-}
+\let\@author\@empty%
+\let\@course\@empty%
+\newcommand{\course}[1]{\gdef\@course{#1}}%
+\let\@courseinfo\@empty%
+\newcommand{\courseinfo}[1]{\gdef\@courseinfo{#1}}%
+\let\@typedby\@empty%
+\newcommand{\typedby}[1]{\gdef\@typedby{#1}}%
+\let\@disclaimer\@empty%
+\newcommand{\disclaimer}[1]{\gdef\@disclaimer{#1}}%
 \AtBeginDocument{%
 \hypersetup{
 pdfinfo={
 Title={\@title},
-Author={\@author}
+Author={\ifx\@author\@empty\ifx\@typedby\@empty\else\@typedby\fi\else\@author\fi}
 }
 }%
 }
+\newcommand\maketitlepage{%
+\begin{titlepage}
+    \sffamily
+    \ifkindledx\relax\else\vspace*{3cm}\fi
 
-\renewcommand*{\@maketitle}{%
-  \clearpage
-  \let\footnote\thanks
-  \ifx\@extratitle\@empty \else
-    \noindent\@extratitle \next@tpage \if@twoside \null\next@tpage \fi
-  \fi
-  \setparsizes{\z@}{\z@}{\z@\@plus 1fil}\par@updaterelative
-  \ifx\@titlehead\@empty \else
-    \begin{minipage}[t]{\textwidth}
-      \@titlehead
-    \end{minipage}\par
-  \fi
-  \null
-  \vskip 2em%
-  \begin{center}%
-    \ifx\@subject\@empty \else
-      {\subject@font \@subject \par}
-      \vskip 1.5em
+    \noindent
+    \huge\color{sectioningcolor}
+    \@title\\[0.6cm]
+    \ifx\@course\@empty \else
+      \normalcolor\large
+      based on the course\\
+      \emph{\@course}%
+      \ifx\@courseinfo\@empty\else\\\@courseinfo\fi\\[1cm]
     \fi
-    {\titlefont%
-     {\normalcolor Notes on:}\\%
-     {\Large\citeauthor{\ck@paperref}\\}%
-     \citetitle{\ck@paperref}%
-     {\normalcolor\cite{\ck@paperref}}\par%
-    }%
-    \vskip .5em
-    {\ifx\@subtitle\@empty\else\usekomafont{subtitle}\@subtitle\par\fi}%
-    \vskip 1em
-    {\scshape
-      \lineskip .5em%
-      \begin{tabular}[t]{c}
-        \@author
-      \end{tabular}\par
-    }%
-    {\scshape \@date%
-      \ifx\@version\@empty\else{} --- v\@version\fi%
-      \par
-    }%
-    \vskip \z@ \@plus 1em
-    {\Large \@publishers \par}
-    \ifx\@dedication\@empty \else
-      \vskip 2em
-      {\Large \@dedication \par}
+    \Large
+    \ifx\@typedby\@empty{\ifx\@author\@empty\else\@author\\[1cm]\fi}\else
+      written by \@typedby\\[1cm]
     \fi
-  \end{center}%
-  \par
-  \vskip 1em
-}%
+    \normalcolor
+    \large
+    \ifx\@version\@empty\else
+      Version \@version\\
+    \fi
+    \ifx\@date\today\else\@date\fi
+
+\clearpage\normalfont\normalsize\normalcolor
+\thispagestyle{plain}
+\noindent
+\ifx\@disclaimer\@empty\else\@disclaimer\\[1cm]\fi
+The current version of this text as well as the \LaTeX{} source code can be found
+at \url{http://caramdir.at/math}.
+
+\ifkindledxlandscape%
+\noindent This version of the document has been specially formatted to fit on a Kindle DX (second generation) in landscape rotation.
+For optimal viewing select \enquote{actual size} from the text menu.
+\fi
+\ifkindledxportrait%
+\noindent This version of the document has been specially formatted to fit on a Kindle DX (second generation).
+\fi
+\vfill
+
+\noindent
+This document was typeset with
+\ifluatex Lua\LaTeX\fi\ifxetex \XeLaTeX\fi{} and KOMA-Script.
+The used fonts are \ck@mainfont, \ck@sansfont, \ck@monofont{} and \ck@mathfont.
+\vspace{1cm}
+
+\noindent
+This work is licensed under the Creative Commons Attribution-Share Alike 3.0 Austria License.
+To view a copy of this license, visit \url{http://creativecommons.org/licenses/by-sa/3.0/at/}
+or send a letter to\\
+Creative Commons\\
+171 Second Street, Suite 300\\
+San Francisco\\
+California, 94105\\
+USA.
+\end{titlepage}
+\cleardoublepage
+}
 \endinput
 %%
-%% End of file `paper-notes.cls'.
+%% End of file `long-notes.cls'.
