--- a/math-general.sty
+++ b/math-general.sty
@@ -15,6 +15,7 @@
 \DeclareMathOperator\supp{supp}     % support
 \DeclareMathOperator\sign{sgn}      % sign
 \DeclareMathOperator\trace{tr}      % trace
+\newcommand\proj[1]{\operatorname{pr}_{#1}} % projection on a factor
 
 \newcommand\abs[1]{\left|#1\right|} % absolute value
 \AtBeginDocument{%
@@ -101,3 +102,4 @@
     \nobreak \mskip 6muplus1mu \mathpunct {}\nonscript \mkern -\thinmuskip{:}\mskip 2mu\relax%
 }
 \newcommand\powerseries[2]{#1\lBrack #2\rBrack} % power series
+\newcommand\property{\mathcal}          % some (abstract) property 
