--- a/classes.dtx
+++ b/classes.dtx
@@ -462,6 +462,17 @@ version 2005/12/01 or later.
 \fi
 
 \newcommand\sidepicture[2][]{\marginpar{#2\\[0.5em]{\footnotesize\itshape #1}}}
+\newcommand\reference[1]{\remark{\textit{Reference:} \normalfont #1}}
+%    \end{macrocode}
+% 
+% \subsection{\texttt{todonotes}}
+% Have common options for the \cs{todo} command.
+%    \begin{macrocode}
+\def\ck@todooptions{}
+\def\todooptions#1{\def\ck@todoptions{#1}}
+\let\oldtodo\todo
+\def\todo{\@ifnextchar[{\ck@todo}{\ck@todo[]}}
+\def\ck@todo[{\expandafter\oldtodo\expandafter[\ck@todooptions}
 %    \end{macrocode}
 %
 % \subsection{Remap some characters}
