--- a/math-alg.sty
+++ b/math-alg.sty
@@ -6,6 +6,7 @@
 \newcommand\catModules[1]{#1\text{-}\cat{Mod}}      % modules
 \newcommand\catCoModules[1]{#1\text{-}\cat{coMod}}  % comodules
 \newcommand\catRep[1]{#1\text{-}\cat{Rep}}          % representations
+\newcommand\catAlg[1]{\cat{Alg}_{#1}}               % algebras
 
 % abelian categories
 \newcommand\coim{\operatorname{coim}}               % coimage
