--- a/math-general.sty
+++ b/math-general.sty
@@ -88,14 +88,18 @@
 \newcommand\commacat\catover            % Comma category
 \newcommand\oppcat[1]{#1^{\mathrm{op}}} % opposite category
 \newcommand\catopp[1]{\oppcat{\cat #1}} % opposite category with automatic formatting
+\DeclareMathOperator\colim{colim}       % colimit
 
 % common categories
 \newcommand\catSet{\cat{Set}}
+\newcommand\catPointedSet{\cat{Set_*}}
 \newcommand\catTop{\cat{Top}}
+\newcommand\catPointedTop{\cat{Top_*}}
 \newcommand\catGroup{\cat{Grp}}
 \newcommand\catAbGroup{\cat{Ab}}
 \newcommand\catVect[1][]{\cat{Vect}_{#1}}
 \newcommand\catGroupoids{\cat{Groupoids}}
+\newcommand\catOpenSubsets[1]{\cat{Open}(#1)}
 
 % misc
 \newcommand\cocolon{%                   % colon on the right side (i.e. for an adjunction)
