--- a/math-general.sty
+++ b/math-general.sty
@@ -89,6 +89,7 @@
 \newcommand\oppcat[1]{#1^{\mathrm{op}}} % opposite category
 \newcommand\catopp[1]{\oppcat{\cat #1}} % opposite category with automatic formatting
 \DeclareMathOperator\colim{colim}       % colimit
+\newcommand\equalizer[2]{\operatorname{Eq}(#1,#2)}  % equalizer
 
 % common categories
 \newcommand\catSet{\cat{Set}}
