different list numbering

--- a/classes.dtx
+++ b/classes.dtx
@@ -222,6 +222,7 @@ version 2005/12/01 or later.
 % List environments.
 %    \begin{macrocode}
 \RequirePackage{paralist}
+\setdefaultenum{(i)}{(a)}{(A)}{1.}
 %    \end{macrocode}
 % English ordinal numbers
 %    \begin{macrocode}
