--- a/short-lecture-notes.cls
+++ b/short-lecture-notes.cls
@@ -93,6 +93,7 @@
     \RequirePackage{babel}
 \fi
 \RequirePackage{paralist}
+\setdefaultenum{(i)}{(a)}{(A)}{1.}
 \RequirePackage{engord}
 \RequirePackage{needspace}
 \RequirePackage{dtklogos}
