--- a/math-general.sty
+++ b/math-general.sty
@@ -98,6 +98,7 @@
 \newcommand\rightadjointto{\vdash}
 
 % common categories
+\newcommand\catCat{\cat{Cat}}
 \newcommand\catSet{\cat{Set}}
 \newcommand\catPointedSet{\cat{Set_*}}
 \newcommand\catTop{\cat{Top}}
