--- a/classes.dtx
+++ b/classes.dtx
@@ -546,12 +546,14 @@ version 2005/12/01 or later.
     \newtheorem{Rems}[Thm]{Remarks}
     \newtheorem{Exercise}[Thm]{Exercise}
     \newtheorem{Q}[Thm]{Question}
+    \newtheorem{Warning}[Thm]{Warning}
 \else
     \newtheorem*{Rem}{Remark}
     \newtheorem*{RemAd}{Remark*}
     \newtheorem*{Rems}{Remarks}
     \newtheorem*{Exercise}{Exercise}
     \newtheorem*{Q}{Question}
+    \newtheorem*{Warning}{Warning}
 \fi
 
 \ifnumbertheorems
