radical of an indeal

--- a/math-ca.sty
+++ b/math-ca.sty
@@ -8,6 +8,8 @@
 \newcommand\ideal\mathfrak
 \DeclareMathOperator\Spec{Spec}
 
+\newcommand\rad{\sqrt}              % radical of an ideal
+
 \DeclareMathOperator\Pic{Pic}
 
 % dimension theory
