--- a/classes.dtx
+++ b/classes.dtx
@@ -414,6 +414,10 @@ version 2005/12/01 or later.
 	\markboth{\indexname}{\indexname}%
 	\addcontentsline{toc}{chapter}{\indexname}%
 }
+\newcommand*\lettergroup[1]{%
+    \par\textbf{\textsf{\color{sectioningcolor}#1}}\par%
+    \nopagebreak
+}
 
 \RequirePackage[noprefix,refpage,intoc]{nomencl}
 \renewcommand\nomname{List of Notation}
