--- a/lecture-notes.cls
+++ b/lecture-notes.cls
@@ -234,6 +234,13 @@
 \newunicodechar{ }{ } % no-break space
 \newunicodechar{ }{ } % narrow no-break space
 \RequirePackage[colorlinks=false,unicode=true]{hyperref}
+\RequirePackage{bookmark}
+\let\ck@oldtableofcontents\tableofcontents
+\def\tableofcontents{%
+    \cleardoublepage%
+    \pdfbookmark{\contentsname}{Contents}%
+    \ck@oldtableofcontents%
+}
 \theoremstyle{plain}
 \ifnumbertheorems
 \newtheorem{Thm}{Theorem}[chapter]
