environment for conjectures

--- a/classes.dtx
+++ b/classes.dtx
@@ -536,6 +536,7 @@ version 2005/12/01 or later.
     \newtheorem{LemAd}[Thm]{Lemma*}
     \newtheorem{Alg}[Thm]{Algorithm}
     \newtheorem{DefProp}[Thm]{Definition and Proposition}
+    \newtheorem{Conjecture}[Thm]{Conjecture}
 \else
     \newtheorem*{Fact}{Fact}
     \newtheorem*{Claim}{Claim}
@@ -546,6 +547,7 @@ version 2005/12/01 or later.
     \newtheorem*{LemAd}{Lemma*}
     \newtheorem*{Alg}{Algorithm}
     \newtheorem*{DefProp}{Definition and Proposition}
+    \newtheorem*{Conjecture}{Conjecture}
 \fi
 
 \theoremstyle{definition}
