--- a/math-ag.sty
+++ b/math-ag.sty
@@ -2,6 +2,8 @@
 \ProvidesPackage{math-ag}[2011/11/26 Useful commands for writing texts about algebraic geometry]
 \RequirePackage{math-ca}
 
+\newcommand\codim{\operatorname{codim}}
+
 % sheaves
 \renewcommand\O{\sheaf O}
 \newcommand\sheafHom{\sheaf{Hom}}
