better perverse categories

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -43,7 +43,7 @@
 \newcommand\cech\check
 
 % perverse sheaves
-\newcommand\perv[1][p]{{}^{#1}\mkern-1mu}
+\newcommand\perv[1][p]{\mkern1mu{}^{#1}\mkern-3mu}
 \newcommand\singsupp{\operatorname{singsupp}}   % singular support of a sheaf
 
 % Grothendieck topologies
