--- a/classes.dtx
+++ b/classes.dtx
@@ -331,12 +331,16 @@ version 2005/12/01 or later.
 
 \ifbw
     \setkomafont{title}{\normalfont\normalcolor\sffamily\scshape\LARGE\color{sectioningcolor}}
+    \setkomafont{part}{\normalfont\normalcolor\sffamily\bfseries\Large\color{sectioningcolor}}
+    \setkomafont{partnumber}{\normalfont\normalcolor\sffamily\bfseries\Large\color{sectioningcolor}}
     \setkomafont{section}{\normalfont\normalcolor\sffamily\scshape\Large\color{sectioningcolor}}
     \setkomafont{subsection}{\normalfont\normalcolor\sffamily\scshape\large\color{sectioningcolor}}
     \setkomafont{sectionentry}{\normalfont\normalcolor\sffamily\scshape}
     \setkomafont{subsubsection}{\normalfont\normalcolor\sffamily\scshape\color{sectioningcolor}}
 \else
     \setkomafont{title}{\normalfont\normalcolor\scshape\LARGE\color{sectioningcolor}}
+    \setkomafont{part}{\normalfont\normalcolor\bfseries\large\color{sectioningcolor}\centering}
+    \setkomafont{partnumber}{\normalfont\normalcolor\bfseries\large\color{sectioningcolor}\centering}
     \setkomafont{section}{\normalfont\normalcolor\scshape\large\color{sectioningcolor}\centering}
     \setkomafont{subsection}{\normalfont\normalcolor\scshape\color{sectioningcolor}}
     \setkomafont{sectionentry}{\normalfont\normalcolor\scshape}
