--- a/math-general.sty
+++ b/math-general.sty
@@ -78,6 +78,7 @@
 \newcommand\setclosure\overline         % closure of a subset of a topological space
 \newcommand\sheaf\mathscr
 \newcommand\cover\mathfrak
+\newcommand\setset\mathfrak             % a set of subsets
 
 % sets of numbers
 \newcommand\units{\times}               % for use in ℂ^\units
