--- a/math-ag.sty
+++ b/math-ag.sty
@@ -8,6 +8,7 @@
 \renewcommand\O{\sheaf O}
 \newcommand\sheafHom{\sheaf{Hom}}
 \let\shHom\sheafHom                             % depreciated
+\newcommand\sheafEnd{\sheaf{E\mkern-1.2mu n\mkern-2mu d}}
 \newcommand\sheafify[1]{#1^a}                   % sheafification
 
 
