--- a/classes.dtx
+++ b/classes.dtx
@@ -100,6 +100,7 @@ version 2005/12/01 or later.
 \newif\iffinal
 \newif\ifnumbertheorems
 \numbertheoremstrue
+\newif\ifnumberinsections
 \newif\ifbiblatexalpha
 \newif\ifcgs
 %    \end{macrocode}
@@ -129,11 +130,12 @@ version 2005/12/01 or later.
 \DeclareOption{no-theorem-numbers}{
     \numbertheoremsfalse
 }
-
+\DeclareOption{number-in-sections}{
+    \numberinsectionstrue
+}
 \DeclareOption{biblatex-alpha}{
     \biblatexalphatrue
 }
-
 \DeclareOption{gcs}{
     \gcstrue
 }
@@ -543,8 +545,12 @@ version 2005/12/01 or later.
 %</common>
 %    \begin{macrocode}
 \ifnumbertheorems
+    \ifnumberinsections
+        \newtheorem{Thm}{Theorem}[section]
+    \else
 %<long-common>\newtheorem{Thm}{Theorem}[chapter]
 %<short-common>\newtheorem{Thm}{Theorem}
+    \fi
 \else
     \newtheorem*{Thm}{Theorem}
 \fi
