--- a/short-notes.cls
+++ b/short-notes.cls
@@ -33,6 +33,7 @@
 \newif\iffinal
 \newif\ifnumbertheorems
 \numbertheoremstrue
+\newif\ifnumberinsections
 \newif\ifbiblatexalpha
 \newif\ifcgs
 \IfEndWith{\jobname}{\detokenize{-kindledxlandscape}}{\kindledxlandscapetrue}{}
@@ -54,11 +55,12 @@
 \DeclareOption{no-theorem-numbers}{
     \numbertheoremsfalse
 }
-
+\DeclareOption{number-in-sections}{
+    \numberinsectionstrue
+}
 \DeclareOption{biblatex-alpha}{
     \biblatexalphatrue
 }
-
 \DeclareOption{gcs}{
     \gcstrue
 }
@@ -241,7 +243,11 @@
 }
 \theoremstyle{plain}
 \ifnumbertheorems
+    \ifnumberinsections
+        \newtheorem{Thm}{Theorem}[section]
+    \else
 \newtheorem{Thm}{Theorem}
+    \fi
 \else
     \newtheorem*{Thm}{Theorem}
 \fi
