--- a/math-general.sty
+++ b/math-general.sty
@@ -112,6 +112,8 @@
 \newcommand\catRing{\cat{Ring}}
 \newcommand\catCRing{\cat{CRing}}
 
+\newcommand\Forget{\operatorname{Forg}}   % forgetful functor
+
 % misc
 \newcommand\cocolon{%                   % colon on the right side (i.e. for an adjunction)
     \nobreak \mskip 6muplus1mu \mathpunct {}\nonscript \mkern -\thinmuskip{:}\mskip 2mu\relax%
