--- a/math-ag.sty
+++ b/math-ag.sty
@@ -6,7 +6,7 @@
 
 % sheaves
 \renewcommand\O{\sheaf O}
-\newcommand\sheafHom{\sheaf{Hom}}
+\newcommand\sheafHom{\sheaf{H\mkern-2mu o\mkern-0.8mu m}}
 \let\shHom\sheafHom                             % depreciated
 \newcommand\sheafEnd{\sheaf{E\mkern-1.2mu n\mkern-2mu d}}
 \newcommand\sheafify[1]{#1^a}                   % sheafification
