add microtype and update version information

--- a/classes.dtx
+++ b/classes.dtx
@@ -10,7 +10,7 @@
 \keepsilent
 \askforoverwritefalse
 \preamble
-Copyright (C) 2011 by Clemens Koppensteiner
+Copyright (C) 2011-2013 by Clemens Koppensteiner
 -------------------------------------------
 
 This file may be distributed and/or modified under the
@@ -48,7 +48,7 @@ version 2005/12/01 or later.
 %<lecture-notes>\ProvidesClass{lecture-notes}
 %<short-lecture-notes>\ProvidesClass{short-lecture-notes}
 %<paper-notes>\ProvidesClass{paper-notes}
-%<common>   [2011/07/22 v0.2
+%<common>   [2013/06/18 v0.3
 %<long-notes>      A class for longer notes
 %<short-notes>     A class for short notes
 %<lecture-notes>   A class for lecture notes (with chapters)
@@ -257,6 +257,11 @@ version 2005/12/01 or later.
 % Wrappers around \eTeX\ primitives.
 %    \begin{macrocode}
 \RequirePackage{etoolbox}
+%    \end{macrocode}
+%
+% Microtype extensions.
+%    \begin{macrocode}
+\RequirePackage{microtype}
 %    \end{macrocode}
 %
 % \section{Fonts}
