--- a/math-ag.sty
+++ b/math-ag.sty
@@ -39,6 +39,8 @@
 \renewcommand\GL[2][]{\operatorname{GL}_#2\ifx#1\@empty\else(#1)\fi}
 \renewcommand\SL[2][]{\operatorname{SL}_#2\ifx#1\@empty\else(#1)\fi}
 \renewcommand\PGL[2][]{\operatorname{PGL}_#2\ifx#1\@empty\else(#1)\fi}
+\renewcommand\SO[2][]{\operatorname{SO}_#2\ifx#1\@empty\else(#1)\fi}
+\renewcommand\Sp[2][]{\operatorname{Sp}_#2\ifx#1\@empty\else(#1)\fi}
 
 % cohomology
 \newcommand\cech\check
