--- a/math-general.sty
+++ b/math-general.sty
@@ -80,6 +80,8 @@
 \newcommand\GL[2]{\ensuremath{\mathrm{GL}_{#1}(#2)}}
 \newcommand\SL[2]{\ensuremath{\mathrm{SL}_{#1}(#2)}}
 \newcommand\PGL[2]{\ensuremath{\mathrm{PGL}_{#1}(#2)}}
+\newcommand\SO[2]{\ensuremath{\mathrm{SO}_{#1}(#2)}}
+\newcommand\Sp[2]{\ensuremath{\mathrm{Sp}_{#1}(#2)}}
 
 % topology
 \newcommand\setclosure\overline         % closure of a subset of a topological space
