GL related definitions

--- a/math-gl.sty
+++ b/math-gl.sty
@@ -4,4 +4,7 @@
 
 \newcommand\Loc{\operatorname{Loc}}
 \newcommand\Bun{\operatorname{Bun}}
+\newcommand\Eis{\operatorname{Eis}}
+\newcommand\IndCoh{\mathrm{IndCoh}}
+\newcommand\catIndCoh[2][]{\cat{IndCoh}_{#1}(#2)}     % category of ind-coherent sheaves
 
