proper capitalization of bibliography header

--- a/classes.dtx
+++ b/classes.dtx
@@ -253,6 +253,10 @@ version 2005/12/01 or later.
     style=alphabetic
 \fi
     ]{biblatex}
+\AtBeginDocument{
+    \def\bibname{bibliography}
+    \def\refname{references}
+}
 %    \end{macrocode}
 %
 % Wrappers around \eTeX\ primitives.
