--- a/math-gl.sty
+++ b/math-gl.sty
@@ -2,9 +2,10 @@
 \ProvidesPackage{math-gl}[2013/08/31 Useful commands for writing texts about Geometric Langlands]
 \RequirePackage{math-ag}
 
-\newcommand\Loc{\operatorname{Loc}}
-\newcommand\Bun{\operatorname{Bun}}
-\newcommand\Eis{\operatorname{Eis}}
-\newcommand\IndCoh{\mathrm{IndCoh}}
+\newcommand\Loc{\operatorname{Loc}}     % local systems
+\newcommand\Bun{\operatorname{Bun}}     % bundles
+\newcommand\Eis{\operatorname{Eis}}     % Eisenstein series functor
+\newcommand\CT{\operatorname{CT}}       % constant term functor
 \newcommand\catIndCoh[2][]{\cat{IndCoh}_{#1}(#2)}     % category of ind-coherent sheaves
+\newcommand\IndCoh{\mathrm{IndCoh}}     % to mark IndCoh versions of functors
 
