--- a/math-gl.sty
+++ b/math-gl.sty
@@ -2,6 +2,7 @@
 \ProvidesPackage{math-gl}[2013/08/31 Useful commands for writing texts about Geometric Langlands]
 \RequirePackage{math-ag}
 
+\newcommand\ld\check                    % Langlands dual
 \newcommand\Loc{\operatorname{Loc}}     % local systems
 \newcommand\Bun{\operatorname{Bun}}     % bundles
 \newcommand\Eis{\operatorname{Eis}}     % Eisenstein series functor
