An environment for assumptions

--- a/classes.dtx
+++ b/classes.dtx
@@ -600,8 +600,10 @@ version 2005/12/01 or later.
 \theoremstyle{definition}
 \ifnumbertheorems
     \newtheorem{Def}[Thm]{Definition}
+    \newtheorem{Assumption}[Thm]{Assumption}
 \else
     \newtheorem*{Def}{Definition}
+    \newtheorem*{Assumption}{Assumption}
 \fi
 \newtheorem*{Notation}{Notation}
 
