points and maps

--- a/math-ag.sty
+++ b/math-ag.sty
@@ -34,6 +34,8 @@
 
 \newcommand\Grass[2]{\operatorname{Grass}(#1,#2)}   % Grassmannian
 
+\newcommand\pt{\mathrm{pt}}                     % a point
+
 \newcommand\Sym[2]{\operatorname{Sym}^{#1}#2}   % symmetric product
 
 % algebraic groups
