--- a/math-general.sty
+++ b/math-general.sty
@@ -34,6 +34,7 @@
 % morphisms
 \newcommand\id[1][]{{\mathrm{Id}_{#1}}}   % identity map
 \DeclareMathOperator\Hom{Hom}       
+\DeclareMathOperator\Maps{Maps}       
 \DeclareMathOperator\Aut{Aut}       
 \DeclareMathOperator\End{End}       
 \DeclareMathOperator\coker{coker}   % cokernel       
