--- a/classes.dtx
+++ b/classes.dtx
@@ -470,6 +470,7 @@ version 2005/12/01 or later.
     matrix,
     intersections}
 \tikzstyle{every picture}+=[>=latex]
+\RequirePackage{tikz-cd}
 \tikzset{commutative diagram/.style={
     matrix of math nodes,
     column sep=2.5em,
