--- a/math-ag.sty
+++ b/math-ag.sty
@@ -26,6 +26,7 @@
 \newcommand\catQCoh[2][]{\cat{QCoh}^{#1}(#2)}   % category of quasicoherent sheaves
 \newcommand\catPerf[1]{\cat{Perf}(#1)}          % category of perfect sheaves
 \newcommand\catSing[1]{\cat{Sing}(#1)}          % singularity category of a space
+\newcommand\catDMod[1]{\cat{DMod}(#1)}          % category of D-modules
 
 \newcommand\as[2][]{\mathbb A^{#2}_{#1}}        % affine space
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
