--- a/math-general.sty
+++ b/math-general.sty
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{math-general}[2011/12/05 Useful commands for writing texts about mathematics]
+\ProvidesPackage{math-general}[2014/04/15 Useful commands for writing texts about mathematics]
 
 % Normalize Greek letters
 \newunicodechar{ϱ}{ρ}
@@ -25,6 +25,7 @@
 
 \newcommand\res[2]{\mathchoice{\left.#1\right|_{#2}}{#1|_{#2}}{#1|_{#2}}{#1|_{#2}}}
 
+\def\tensor{\otimes}                % tensor product
 \def\cotimes{\amalg}
 
 % arrows
