constructions and d-modules

--- a/classes.dtx
+++ b/classes.dtx
@@ -602,9 +602,11 @@ version 2005/12/01 or later.
 \ifnumbertheorems
     \newtheorem{Def}[Thm]{Definition}
     \newtheorem{Assumption}[Thm]{Assumption}
+    \newtheorem{Construction}[Thm]{Construction}
 \else
     \newtheorem*{Def}{Definition}
     \newtheorem*{Assumption}{Assumption}
+    \newtheorem*{Construction}{Construction}
 \fi
 \newtheorem*{Notation}{Notation}
 
