--- a/math-ag.sty
+++ b/math-ag.sty
@@ -32,6 +32,7 @@
 \newcommand\ps[2][]{\mathbb P^{#2}_{#1}}        % projective space
 \newcommand\Proj{\operatorname{Proj}}           
 \newcommand\Gm{\mathbb{G}_m}                    % G_m
+\newcommand\Ga{\mathbb{G}_a}                    % G_a
 
 \newcommand\Grass[2]{\operatorname{Grass}(#1,#2)}   % Grassmannian
 
