use enumitem for lists

--- a/classes.dtx
+++ b/classes.dtx
@@ -229,8 +229,11 @@ version 2005/12/01 or later.
 %    \end{macrocode}
 % List environments.
 %    \begin{macrocode}
-\RequirePackage{paralist}
-\setdefaultenum{(i)}{(a)}{(A)}{1.}
+\RequirePackage{enumitem}
+\setlist[enumerate,1]{label=(\roman*)}
+\setlist[enumerate,2]{label=(\alph*)}
+\setlist[enumerate,3]{label=(\Alph*)}
+\setlist[enumerate,4]{label=\arabic*.}
 %    \end{macrocode}
 % English ordinal numbers
 %    \begin{macrocode}
