Environment for problems

--- a/classes.dtx
+++ b/classes.dtx
@@ -617,6 +617,7 @@ version 2005/12/01 or later.
     \newtheorem{Rems}[Thm]{Remarks}
     \newtheorem{Exercise}[Thm]{Exercise}
     \newtheorem{Q}[Thm]{Question}
+    \newtheorem{Problem}[Thm]{Problem}
     \newtheorem{Warning}[Thm]{Warning}
 \else
     \newtheorem*{Rem}{Remark}
@@ -624,6 +625,7 @@ version 2005/12/01 or later.
     \newtheorem*{Rems}{Remarks}
     \newtheorem*{Exercise}{Exercise}
     \newtheorem*{Q}{Question}
+    \newtheorem*{Problem}{Problem}
     \newtheorem*{Warning}{Warning}
 \fi
 
