Two stacks used in [AG].

--- a/math-gl.sty
+++ b/math-gl.sty
@@ -4,11 +4,13 @@
 
 \newcommand\ld\check                    % Langlands dual
 \newcommand\Loc{\operatorname{Loc}}     % local systems
+\newcommand\LocSys{\operatorname{LocSys}}   % local systems (alternative)
 \newcommand\Bun{\operatorname{Bun}}     % bundles
 \newcommand\Eis{\operatorname{Eis}}     % Eisenstein series functor
 \newcommand\CT{\operatorname{CT}}       % constant term functor
 \newcommand\catIndCoh[2][]{\cat{IndCoh}_{#1}(#2)}     % category of ind-coherent sheaves
 \newcommand\IndCoh{\mathrm{IndCoh}}     % to mark IndCoh versions of functors
+\newcommand\Arth{\operatorname{Arth}}   % stack of Arthur parameters
 
 \newcommand\sHecke[1]{%                 % spectral Hecke stack
     \operatorname{Hecke}_{#1}^{\mathrm{spec}}}
