Remove dtklogos since it is bugged.

--- a/classes.dtx
+++ b/classes.dtx
@@ -245,7 +245,7 @@ version 2005/12/01 or later.
 %    \end{macrocode}
 % Various \TeX\ logos.
 %    \begin{macrocode}
-\RequirePackage{dtklogos}
+%\RequirePackage{dtklogos}
 %    \end{macrocode}
 %
 % Bibliographies
